@@ -2,6 +2,7 @@
 * 0.1.20
 *
 
+- Added Oracle support (via ODBC driver)
 - Added server installation program (Windows only)
 - Added server configuration wizard (Windows only)
 - SNMP agent connectivity check improved
